# CSIRO_repository

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
conf/: config.yaml
conf/dir/: kaggle.yaml  local.yaml  test.yaml
conf/experiment/: exp0013_siglip_lightgbm.yaml  exp001_dino+lasso_base.yaml  exp002_dino+lasso_base.yaml  exp003_siglip_lasso.yaml  exp005_dino_base.yaml  exp005_dino_small.yaml  exp007_siglip+ridge.yaml  exp008_siglip+cat.yaml  exp009_siglip_GBR.yaml  exp010_dino_cat.yaml  exp011_dino_GBR.yaml  exp012_dino_ridge.yaml  exp013_siglip_lightgbm.yaml  exp014_dino_3head.yaml  exp015_dinosmall_attention.yaml  exp017_transformonly.yaml  test.yaml
conf/feature/: dino_giant.yaml  siglip.yaml
conf/inference/: convnext.yaml
conf/model/: GBR.yaml  cat_boost.yaml  convnext.yaml  dino_attention.yaml  dino_small.yaml  lasso.yaml  ridge.yaml
conf/training/: default.yaml  lasso.yaml  test_run.yaml
conf/transform/: transform.yaml  transform_7.yaml
src/data/: __init__.py  dataset.py  postprocessing.py  preprocessing.py  transforms.py
src/features/: dino.py  siglip.py
src/models/: __init__.py  biomass.py  override_ml.py
src/utils/: utils.py
